--- a/EDF_Scheduler_Using_FreeRTOS/5-Project_Source/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
+++ b/EDF_Scheduler_Using_FreeRTOS/5-Project_Source/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
@@ -26,42 +26,9 @@ Project File Date:  09/14/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'F:\keil_529\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'RTOSDemo_THUMB'
-compiling ParTest.c...
-compiling queue.c...
-compiling GPIO.c...
-Starter_Files_V1\Starter_Files_V1\source\GPIO.c(49): warning:  #127-D: expected a statement
-  		}
-Starter_Files_V1\Starter_Files_V1\source\GPIO.c: 1 warning, 0 errors
-assembling Startup.s...
-compiling port.c...
-compiling GPIO_cfg.c...
-compiling list.c...
-assembling serialISR.s...
-compiling serial.c...
-Starter_Files_V1\Starter_Files_V1\source\serial.c(185): warning:  #550-D: variable "cChar"  was set but never used
-  signed char cChar;
-Starter_Files_V1\Starter_Files_V1\source\serial.c: 1 warning, 0 errors
-compiling main.c...
-Starter_Files_V1\Starter_Files_V1\source\main.c(128): warning:  #167-D: argument of type "int *" is incompatible with parameter of type "TickType_t *const"
-  		vTaskDelayUntil( &xLastWakeTime , 50); 
-Starter_Files_V1\Starter_Files_V1\source\main.c(100): warning:  #550-D: variable "Edge_Flag_tobe"  was set but never used
-    char Edge_Flag_tobe = 0;
-Starter_Files_V1\Starter_Files_V1\source\main.c(169): warning:  #167-D: argument of type "int *" is incompatible with parameter of type "TickType_t *const"
-  		vTaskDelayUntil( &xLastWakeTime , 50);
-Starter_Files_V1\Starter_Files_V1\source\main.c(141): warning:  #550-D: variable "Edge_Flag_tobe"  was set but never used
-    char Edge_Flag_tobe = 0;
-Starter_Files_V1\Starter_Files_V1\source\main.c(272): warning:  #223-D: function "xTaskPeriodicCreate" declared implicitly
-     xTaskPeriodicCreate(
-Starter_Files_V1\Starter_Files_V1\source\main.c: 5 warnings, 0 errors
-assembling portASM.s...
-compiling heap_2.c...
-compiling tasks.c...
-linking...
-Program Size: Code=11536 RO-data=32 RW-data=212 ZI-data=15380  
-FromELF: creating hex file...
-".\bin\RTOSDemo.axf" - 0 Error(s), 7 Warning(s).
-Build Time Elapsed:  00:00:01
+Build target 'RTOSDemo_THUMB'
+".\bin\RTOSDemo.axf" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
